#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GNOME Shell Extension Super+Tab Launcher], [6], [https://github.com/dsboger/gnome-shell-extension-super-tab-launcher/issues], [gnome-shell-extension-super-tab-launcher], [https://github.com/dsboger/gnome-shell-extension-super-tab-launcher])
AC_CONFIG_SRCDIR([src/extension.js])
AC_CONFIG_AUX_DIR([acaux])

# Checks for programs.
AC_PROG_INSTALL

AM_INIT_AUTOMAKE([1.15 foreign])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
